html & CSS validator errors corrected
Note CSS validator threw up 3 parsing errors which have not been fixed. These tend to identify the inclusion of invisible chars so not a major concern.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     background-color: #2fd4ee;
 }
 .common-bg{
-    background-color:lightgray;
+    background-color:rgb(211, 211, 211);
 }
 .nav-bg{
     background-color:#ff6b53;
@@ -28,8 +28,9 @@
     color:white;
 }
 .nav-pills .nav-link:not(.active):hover {
-    background-color: lightgrey;
+    background-color: rgb(211, 211, 211);
     color:black;
+    font-weight:600;
 }
 .position-pills{
     float:right;
@@ -38,6 +39,7 @@
 }
 .navbar-light .navbar-nav .nav-link.active{
     color: white;
+    font-weight:600;
 }
 .company-logo{
     width:40px;
@@ -55,14 +57,13 @@
 .heading-bg{
     width:100%;
     height:200px;
-    border-radius: 0.75em;
+    border-radius:10px;
 }
 .side-image{
-    background: url(../images/IOT.png);
+    background:url(../images/IOT.png);
     background-position:center;
     background-repeat:no-repeat;
     background-size:cover;
-    object-fit: cover;
     height:300px;
 } 
 .my-name {
@@ -78,7 +79,7 @@
     font-weight: 100;
     font-size: 30px;
     color:black;
-    padding:25;
+    padding:25px;
     padding-left: 25px;
     padding-right: 25px;
     line-height: 1.1;
@@ -89,7 +90,7 @@
     border-color: black;
     border-width: 1.5px;
     z-index: 9;
-    border-radius:0.5em;
+    border-radius:10px;
 }
 /****************************Contact bar - index page ******************/
 .contact-bar{
@@ -104,7 +105,7 @@
 .panel-format{
     border:white;
     border-width:5px;
-    border-radius: 0.75em;
+    border-radius:10px;
     border-style:solid;
     display: inline-block;
     margin-top:2px;
@@ -116,13 +117,15 @@
     margin-top:20px;
 }
 .sub-heading-margin{
-    margin: bottom 0.25em;
+    list-style-type:none;
 }
 .skills-career-sub-heading{
     margin-top: 30px;
     list-style-type:none;
 }
-
+.no-bullet{
+    list-style-type:none;
+}
 .career-icon {
     font-size: 30px;
     color: black;
@@ -134,7 +137,7 @@
 .form-field{
     margin-bottom:10px;
     border:1.5px solid;
-    border-color:darkgray;
+    border-color:rgb(169, 169, 169);;
 }
 
 button[type="submit"] {
@@ -149,6 +152,7 @@ button[type="submit"] {
 .legend-format{
     font-weight: bold;
     font-size: 40px;
+    margin-top: 20px;
 }
 /*********************Portfolio**********************/
 .resp-img{
@@ -169,24 +173,28 @@ button[type="submit"] {
     padding-right: 20px;
     padding-top: 10px;
 }
+.margin-lr{
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 /***********************Footer***********************/
 .download-cv{
     font-size:20px;
     color:black;
     margin-left: 10px;
     margin-top: 20px;
-    text-decoration-line: none;
+    text-decoration: none;
 }
 .download-cv:hover{
     font-size:20px;
     color:black;
     font-weight: 600;
-    text-decoration-line: none;
+    text-decoration: none;
 }
 footer{
     color:black;
     min-height: 120px;
-    margin:0;
 }
 .find-me{
     font-size:20px;
@@ -203,8 +211,8 @@ footer{
 }
 .attribution{
     font-size: x-small;
-    color:darkgray;
-    float:bottom-left;
+    color:rgb(169, 169, 169);
+    float:left;
     margin-top: 20px;
 }
 
